deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openproxy
  labels:
    app.kubernetes.io/name: openproxy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: openproxy
